[package]
name = "file-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
binary = ["dep:bincode"]
json = ["dep:serde_json"]
tokio = ["dep:tokio"]
crypto = ["dep:chacha20poly1305"]

[dependencies]
serde = { version = "1.0", optional = true }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0.107", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }

[dependencies.tokio]
version = "1"
optional = true
default-features = false
features = ["fs", "io-util"]

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros", "fs", "io-util"]
