[package]
name = "file_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
binary = ["serde", "dep:bincode"]
tokio = ["dep:tokio"]

[dependencies]
serde = { version = "1.0", optional = true }
bincode = { version = "1.3.3", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["fs"] }
