[package]
name = "history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = { version = "1" }
bincode = { version = "1.3.3" }
criterion = { version = "0.5" }

[[bench]]
name = "list_fixed"
harness = false

